--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "express-formidable": "^0.1.2"
+    "express-formidable": "^0.1.2",
+    "request": "^2.73.0"
   },
   "devDependencies": {},
   "scripts": {
